--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^3.3.1",
     "@emotion/react": "^11.14.0",
     "axios": "^1.8.4",
+    "mapbox-gl": "^3.11.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
